Add MessagesService tests, fix ui